[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CengalPolyBuild"
dynamic = ["version"]
description = "A Comprehensive and Hackable Build System for Multilingual Python Packages: Cython (including automatic conversion from Python to Cython), C/C++, Objective-C, Go, and Nim, with ongoing expansions to include additional languages"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "ButenkoMS", email = "gtalk@butenkoms.space" },
]
keywords = [
    "cengal",
    "crossplatform",
    "byild system",
    "packaging system",
    "modules management",
    "template",
    "package template",
    "packaging",
    "Cython",
    "C",
    "C/C++",
    "C++",
    "Cpp",
    "Objective-C",
    "Go",
    "Nim",
    "Compilation",
    "Extension",
    "Windows",
    "Linux",
    "macOS",
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Environment :: Other Environment',
    'Environment :: Win32 (MS Windows)',
    'Environment :: X11 Applications',
    'Framework :: AsyncIO',
    'Framework :: MkDocs',
    'Framework :: Setuptools Plugin',
    'Framework :: Sphinx',
    'Framework :: aiohttp',
    'Framework :: tox',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Manufacturing',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Microsoft :: Windows :: Windows 7',
    'Operating System :: Microsoft :: Windows :: Windows 8',
    'Operating System :: Microsoft :: Windows :: Windows 8.1',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows Server 2008',
    'Operating System :: Microsoft :: Windows :: Windows Vista',
    'Operating System :: OS Independent',
    'Operating System :: Other OS',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: BSD',
    'Operating System :: POSIX :: BSD :: FreeBSD',
    'Operating System :: POSIX :: BSD :: NetBSD',
    'Operating System :: POSIX :: BSD :: OpenBSD',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: Other',
    'Operating System :: Unix',
    'Programming Language :: C',
    'Programming Language :: C++',
    'Programming Language :: Cython',
    'Programming Language :: Go',
    'Programming Language :: Objective C',
    'Programming Language :: Other',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: MicroPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Unix Shell',
    'Topic :: Desktop Environment',
    'Topic :: Documentation',
    'Topic :: Documentation :: Sphinx',
    'Topic :: Education',
    'Topic :: Office/Business',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Localization',
    'Topic :: Software Development :: Pre-processors',
    'Topic :: Software Development :: User Interfaces',
    'Topic :: Software Development :: Version Control',
    'Topic :: Software Development :: Version Control :: Git',
    'Topic :: System',
    'Topic :: System :: Archiving :: Packaging',
    'Topic :: System :: Installation/Setup',
    'Topic :: System :: Software Distribution',
    'Topic :: System :: Systems Administration',
    'Topic :: Terminals',
    'Topic :: Text Editors :: Text Processing',
    'Topic :: Text Processing :: Markup',
    'Topic :: Text Processing :: Markup :: Markdown',
    'Topic :: Utilities',
    'Typing :: Typed',
]
dependencies = [
    "py-cpuinfo",
    "cengal_light",
]

[project.urls]
Homepage = "https://github.com/FI-Mihej/CengalPolyBuild"

[tool.hatch.version]
path = "cengal_poly_build/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cengal_poly_build",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/cengal_poly_build",
]